--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h4>El ministro del Interior, Guillermo Francos, trata de alcanzar los últimos acuerdos!!  (NA)</h4>
     <h5> La idea de La Libertad Avanza era que la discusión iniciara este martes o miércoles, a más tardar, pero finalmente esto no ocurrió, aunque el secretario de Relaciones Parlamentarias, Omar de Marchi aprovechó para enviar el paquete fiscal.</h5>
-
+     <h6>Info argentina </h6>
 </body>
 
 <footer>
